[maven] Add informations
 * Developpers
 * Contributors
 * SCM
 * Issue management
 * license

--- a/cellularautomaton-samples/pom.xml
+++ b/cellularautomaton-samples/pom.xml
@@ -1,18 +1,64 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <artifactId>cellularautomaton-parent</artifactId>
-    <groupId>org.cellularautomaton</groupId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  <groupId>org.cellularautomaton</groupId>
-  <artifactId>cellularautomaton-samples</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <dependencies>
-  	<dependency>
-  		<groupId>org.cellularautomaton</groupId>
-  		<artifactId>cellularautomaton-core</artifactId>
-  		<version>0.0.1-SNAPSHOT</version>
-  	</dependency>
-  </dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<artifactId>cellularautomaton-parent</artifactId>
+		<groupId>org.cellularautomaton</groupId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+
+	<groupId>org.cellularautomaton</groupId>
+	<artifactId>cellularautomaton-samples</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+
+	<name>Cellular Automaton</name>
+	<description>Cellular automaton engine.</description>
+	<inceptionYear>2011</inceptionYear>
+
+	<issueManagement>
+		<system>GitHub</system>
+		<url>https://github.com/Sazaju/Cellular-Automaton/issues/</url>
+	</issueManagement>
+
+	<licenses>
+		<license>
+			<name>BSD</name>
+			<url>http://www.freebsd.org/copyright/license.html</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+	<developers>
+		<developer>
+			<name>Matthieu Vergne</name>
+			<email>matthieu_DOT_vergne@(nospam)gmail_DOT_com</email>
+			<url>https://github.com/Sazaju</url>
+		</developer>
+	</developers>
+	<contributors>
+		<contributor>
+			<name>Isammoc</name>
+			<email>isammoc@(nospam)gmail_DOT_com</email>
+			<timezone>+2</timezone>
+			<url>https://github.com/Isammoc</url>
+			<roles>
+				<role>Mavenize the project</role>
+			</roles>
+		</contributor>
+	</contributors>
+	<scm>
+		<connection>scm:git:git://github.com/Sazaju/Cellular-Automaton.git
+		</connection>
+		<developerConnection>scm:git:git@github.com:${github.username}/Cellular-Automaton.git
+		</developerConnection>
+		<url>https://github.com/Sazaju/Cellular-Automaton</url>
+	</scm>
+
+
+	<dependencies>
+		<dependency>
+			<groupId>org.cellularautomaton</groupId>
+			<artifactId>cellularautomaton-core</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+	</dependencies>
 </project>
