--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.cellularautomaton</groupId>
-  <artifactId>cellularautomaton-parent</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>pom</packaging>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.cellularautomaton</groupId>
+	<artifactId>cellularautomaton-parent</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>pom</packaging>
 	<name>Cellular Automaton</name>
 	<description>Cellular automaton engine.</description>
 	<inceptionYear>2011</inceptionYear>
@@ -43,8 +44,21 @@
 		<developerConnection>scm:git:git@github.com:${github.username}/Cellular-Automaton.git</developerConnection>
 		<url>https://github.com/Sazaju/Cellular-Automaton</url>
 	</scm>
-  <modules>
-  	<module>cellularautomaton-core</module>
-  	<module>cellularautomaton-samples</module>
-  </modules>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	<modules>
+		<module>cellularautomaton-core</module>
+		<module>cellularautomaton-samples</module>
+	</modules>
 </project>
